# esp-walle-x

./: CMakeLists.txt  README.md
main/: CMakeLists.txt  Kconfig.projbuild  control.c  control.h  led_control.c  led_control.h  main.c  mpu6050.c  mpu6050.h  pid_control.c  pid_control.h  soft_ap.c  soft_ap.h  tcp_server.c  tcp_server.h
main/mpu6050/: inv_mpu.c  inv_mpu.h  inv_mpu_dmp_motion_driver.c  mpu6050.c  mpu6050.h
